--- a/app/src/main/res/layout/activity_wonders.xml
+++ b/app/src/main/res/layout/activity_wonders.xml
@@ -12,4 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvWonders"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_wonder"/>
+
 </FrameLayout>
