--- a/app/src/main/res/layout/item_wonder.xml
+++ b/app/src/main/res/layout/item_wonder.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="@dimen/spacing_medium">
+    android:background="@android:color/white"
+    android:foreground="?selectableItemBackground"
+    android:padding="@dimen/spacing_medium"
+    android:layout_marginBottom="@dimen/spacing_small">
 
     <ImageView
         android:id="@+id/ivPlace"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="2:1"
+        tools:src="@tools:sample/avatars"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        android:background="@color/bg_gray"/>
+
+    <TextView
+        android:id="@+id/tvDescription"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:text="Description"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        app:layout_constraintStart_toEndOf="@id/ivPlace"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/ivPlace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:ellipsize="end"
+        style="@style/PrimaryTextView"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
