--- a/app/src/main/res/layout/activity_wonder_detail.xml
+++ b/app/src/main/res/layout/activity_wonder_detail.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".presentation.features.detail.WonderDetailActivity">
 
+    <include
+        layout="@layout/include_toolbar"/>
+
     <ImageView
         android:id="@+id/ivWonderPlace"
         android:layout_width="match_parent"
@@ -13,7 +16,22 @@
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="3:2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:src="@tools:sample/avatars" />
+
+
+    <TextView
+        android:id="@+id/tvDescription"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ivWonderPlace"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        android:layout_marginTop="@dimen/spacing_medium"
+        tools:text="@tools:sample/lorem/random"
+        style="@style/SubTitleTextView"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
