--- a/app/src/main/res/layout/layout_loading_wonder_list.xml
+++ b/app/src/main/res/layout/layout_loading_wonder_list.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.supercharge.shimmerlayout.ShimmerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:shimmer_animation_duration="600"
+    app:shimmer_auto_start="true"
+    app:shimmer_color="@android:color/white"
+    >
 
-    <include layout="@layout/include_item_wonder_loading" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <include layout="@layout/include_item_wonder_loading" />
+        <include layout="@layout/include_item_wonder_loading" />
 
-    <include layout="@layout/include_item_wonder_loading" />
+        <include layout="@layout/include_item_wonder_loading" />
 
-    <include layout="@layout/include_item_wonder_loading" />
+        <include layout="@layout/include_item_wonder_loading" />
 
-    <include layout="@layout/include_item_wonder_loading" />
-</LinearLayout>
+        <include layout="@layout/include_item_wonder_loading" />
+
+        <include layout="@layout/include_item_wonder_loading" />
+    </LinearLayout>
+</io.supercharge.shimmerlayout.ShimmerLayout>
